crates/aranya-policy-compiler/tests/data/match_stmt/arm_fn_call_invalid_type.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid expression
  |
4 |         f() => {}
  |         ^^^ match pattern must be a literal expression
